A refactoring for controller & services removal of redundant finder$